FullQa New/src/objects/Opportunity_PPM_Split__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Opportunity__r.BookedValue__c * Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_PPM_Splits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PMM_Type__c</fullName>
        <description>Used to track whether SAM is DSP or MSP
Owner: Asher Mathew</description>
        <label>PMM Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DSP</fullName>
                </value>
                <value>
                    <fullName>MSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Team_Member_Manager__c</fullName>
        <description>Team Member Manager used for reporting.
Integrated, No
Asher Mathews</description>
        <formula>Team_Member__r.Manager.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_PPM_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity PMM Split</label>
    <nameField>
        <displayFormat>oppm{0000}</displayFormat>
        <label>Opportunity PMM Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity PMM Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>